# lifeline

./: .gitignore  CHATBOT_FEATURES.md  Makefile  README.md  TEST_ONE_LINERS.md  WEB_QUICKSTART.md  install.sh  main.py  pyproject.toml  web.py
.github/workflows/: build-binaries.yml  build-release.yml  test-install.yml
assets/icons/: LifeLine.icns
docs/: AGENTS.md  BUILD.md  CLAUDE.md  QUICKSTART.md  QUICKSTART_WEB.md  START_HERE.md  WEB_UI_FEATURES.md  WEB_UI_OVERVIEW.txt  WEB_UI_README.md  WEB_UI_SUMMARY.md  requirements.txt
examples/: example_usage.py
lifeline/: __init__.py  agent.py  api_key.py  cli.py  database.py  mcp_server.py  models.py  paths.py  tools.py  web_server.py
scripts/: build.py  build_dmg.sh  build_linux.sh  build_macos.sh  build_windows.ps1  install_app.sh  install_lifeline.sh
web-ui/: .gitignore  .npmrc  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  run
web-ui/.github/: CONTRIBUTING.md  pull_request_template.md  template.yml
web-ui/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
web-ui/.github/workflows/: ci.yml
web-ui/app/: layout.tsx  page.tsx
web-ui/app/components/: ChatInput.tsx  ChatMessage.tsx  Header.tsx  ThinkingIndicator.tsx
web-ui/app/hooks/: useWebSocket.ts
